--- a/src/energy.tex
+++ b/src/energy.tex
@@ -272,7 +272,7 @@ In a weather/climate model TE conservation errors can appear in many places thro
 \item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget. CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
 \item {\em{Pressure work {\color{red}{error}}}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work {\color{red}{error}}}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Continuous TE formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a TE different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a TE that is more accurate and comprehensive than that used in the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design; and should be eliminated in the future.
-\item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
+\item {\em{Dynamical core errors}}: {\color{red}{[mention that we assume that dynamical core is inherently mass conservative]}}Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
 \begin{itemize}
 \item Horizontal inviscid dynamics: Energy errors resulting from solving the inviscid, adiabatic equations of motion.
 \item Hyperviscosity: Filtering errors.
@@ -282,6 +282,8 @@ In a weather/climate model TE conservation errors can appear in many places thro
 \item {\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
 \begin{itemize}
 \item {\em{`Dribbling' errors (or, equivalently, temporal PDC errors)}}: If the TE increment from the parameterizations does not match the change in TE when the tendencies are added to the state in the dynamical core, then there will be a spurious PDC error. This will not happen with the {\em{state-update}} approach in which the tendencies are added immediately after physics and before the dynamical core advances the solution in time.
+
+{\color{red}{PDC errors in temperature (and velocity) tendencies occur because the $T$-increment (call it $\Delta T$) that the parameterizations prescribe leads to a dry thermal energy change of $\Delta M^{(d)}\Delta T$ which will not match the dry thermal energy change when the temeprature tendency is added in smaller chunks in the dynamical core during the `dribbling' of  $\Delta T$. The reason being that $\Delta M^{(d)}$ changes during each time-step and hence the thermal energy change due to physics forcing accumulated during the `dribbling' will not equal $\Delta M^{(d)}\Delta T$. This error could possibly be eliminated by using thermal energy forcing instead of temperature increments.   [mention that PDC errors can be divided into mass `clipping' errors and internal energy and kinetic energy.]}}
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
