--- a/src/energy.tex
+++ b/src/energy.tex
@@ -250,7 +250,7 @@ where $\rho^{(d)}$ is the mass of dry air per unit volume of moist air and $\rho
 \begin{equation}
 \mathcal{L}_{all}=\left\{ `d`,`wv`,`cl`,`ci`,`rn`,`sw`\right\},
 \end{equation}
-Define associated heat capacities at constant pressure $c_p^{(\ell)}$. {\color{red}{We refer to condensates as being {\em{thermodynamically active}} if they are included in the thermodynamic equation and momentum equations. E.g. if the thermodynamic equation is formulated in terms of temperature the energy conversion term includes a generalized heat capacity which is a function of the condensates and their associated heat capacities \citep[see, e.g., section 2.3 in ][]{LetAl2018JAMES}. Similarly the weight of the condensates is included in the pressure field and pressure gradient force.}}  How many and which condensates are thermodynamically active in the dynamical core is controlled with namelist {\tt{qsize\_condensate\_loading}}. If {\tt{qsize\_condensate\_loading=1}} only water vapor ('$wv$') is active, {\tt{qsize\_condensate\_loading=3}} `$wv$`,`$cl$`, and`$ci$` are active, and if {\tt{qsize\_condensate\_loading=5}} then `$wv$`,`$cl$`,`$ci$`,`$rn$`, and `$sw$` are included.
+Define associated heat capacities at constant pressure $c_p^{(\ell)}$. {\color{red}{We refer to condensates as being {\em{thermodynamically and inertially active}} if they are included in the thermodynamic equation and momentum equations. E.g. if the thermodynamic equation is formulated in terms of temperature the energy conversion term includes a generalized heat capacity which is a function of the condensates and their associated heat capacities \citep[see, e.g., section 2.3 in ][]{LetAl2018JAMES}. Similarly the weight of the condensates is included in the pressure field and pressure gradient force.}}  How many and which condensates are thermodynamically{\color{red}{/inertially}} active in the dynamical core is controlled with namelist {\tt{qsize\_condensate\_loading}}. If {\tt{qsize\_condensate\_loading=1}} only water vapor ('$wv$') is active, {\tt{qsize\_condensate\_loading=3}} `$wv$`,`$cl$`, and`$ci$` are active, and if {\tt{qsize\_condensate\_loading=5}} then `$wv$`,`$cl$`,`$ci$`,`$rn$`, and `$sw$` are included.
 
 Using the $\eta^{(d)}$ vertical coordinate and dry mixing ratios the TE (per unit area) that the frictionless adiabatic equations of motion in the CAM-SE dynamical core conserves is
 \begin{equation}
@@ -279,11 +279,18 @@ In a weather/climate model TE conservation errors can appear in many places thro
 \item Vertical remapping: The vertical remapping algorithm from Lagrangian to Eulerian reference surfaces does not conserve TE.
 \item Near round-off negative values of water vapor which are filled to a minimal value without compensation.
 \end{itemize}
-\item {\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
+    {\color{red}{If a dynamical core is not inherently mass-conservative with respect to dry air, water vapor and condensates then TE conservation is affected since
+        \begin{equation}
+          \int_{\eta=0}^{\eta=1} \iint_\mathcal{S}\left( \frac{1}{g}\frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\sum_{\ell \in \mathcal{L}_{all}} \left[m^{(\ell)}\right] dA d \eta^{(d)}
+        \end{equation}
+    is not conserved. Henceforth we assume that the dynamical core is based on an inherently mass-conservative formulation which is the case for CAM-SE and CAM-FV.}}    
+\item \label{item:pdc}{\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
 \begin{itemize}
 \item {\em{`Dribbling' errors (or, equivalently, temporal PDC errors)}}: If the TE increment from the parameterizations does not match the change in TE when the tendencies are added to the state in the dynamical core, then there will be a spurious PDC error. This will not happen with the {\em{state-update}} approach in which the tendencies are added immediately after physics and before the dynamical core advances the solution in time.
 
-{\color{red}{PDC errors in temperature (and velocity) tendencies occur because the $T$-increment (call it $\Delta T$) that the parameterizations prescribe leads to a dry thermal energy change of $\Delta M^{(d)}\Delta T$ which will not match the dry thermal energy change when the temeprature tendency is added in smaller chunks in the dynamical core during the `dribbling' of  $\Delta T$. The reason being that $\Delta M^{(d)}$ changes during each time-step and hence the thermal energy change due to physics forcing accumulated during the `dribbling' will not equal $\Delta M^{(d)}\Delta T$. This error could possibly be eliminated by using thermal energy forcing instead of temperature increments.   [mention that PDC errors can be divided into mass `clipping' errors and internal energy and kinetic energy.]}}
+  {\color{red}{PDC errors in temperature tendencies occur because the $T$-increment (call it $\Delta T$) that the parameterizations prescribe leads to a dry thermal energy change of $\Delta M^{(d)}\Delta T$ which will not match the equivalent dry thermal energy change when the temperature tendency is added in smaller chunks in the dynamical core during the `dribbling' of  $\Delta T$. The discrepancy occurs because $\Delta M^{(d)}$ changes during each dynamics time-step and hence the thermal energy change due to physics forcing accumulated during the `dribbling' will not equal $\Delta M^{(d)}\Delta T$. This error could possibly be eliminated by using thermal energy forcing instead of temperature increments. Similarly, PDC errors in velocity component forcing increments $(\Delta u, \Delta v)$ occur because the dry kinetic energy change of $\Delta M^{(d)}\left[ \left( \Delta u\right)^2+\left( \Delta v\right)^2\right]$ will not match the equivalent dry kinetic energy change when `dribbling' velocity component forcing increments $(\Delta u, \Delta v)$. It is less clear how to eliminate this error as kinetic energy is a quadratic quantity.
+
+A different PDC error can occur when mass-variable tendencies such as vapor vapor forcing, cloud liquid, etc. are `dribbled' during the dynamical core integration. This can lead to a spurious source if there is logic in the dynamical core preventing mixing ratios to become negative. This is referred to as `clipping' PDC errors and are described/discussed in detail in Section \ref{sec:noise}.}}
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
@@ -423,7 +430,7 @@ If $\partial \gi{E}^{({pdc})}=0$ \eqref{eq:budget_efix} can be used to compute $
 Note that we can not use \eqref{eq:pdc} to compute $\partial \gi{E}^{({discr})}$ since $\gi{E}_{phys}\neq \gi{E}_{dyn}$.
 %
 \begin{sidewaystable}
-  \caption{TE tendencies in units of $W/m^2$ associated with various aspects of CAM-SE run in AMIP-type setup (unless otherwise noted). Column 1 is the identifier for the model configuration. See the text for a brief summary of these descriptors. They are defined in more detail in the following sections where the section titles also include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match Table entries with discussion in the text. Column 2 is $\mathcal{N}=${\tt{qsize\_condensate\_loading}} identifying how many water species are thermodynamically active in the dynamical core (see section \ref{sec:defE} for details). Column 3, {\tt{lcp\_moist}}, indicates whether or not the heat capacity includes water variables or not and column 4 shows physics-dynamics coupling method {\tt{ftype}}. The TE tendencies $\partial \gi{E}$ in columns 5-14 are defined in section \ref{sec:diagnostics}. If $\partial \gi{E}$ is less than $10^{-5}$ $W/m^2$ it is set to zero in the Table. Significant changes compared to the baseline ({\em{TE consistent}} configuration) discussed in the main text are in bold font.}
+  \caption{TE tendencies in units of $W/m^2$ associated with various aspects of CAM-SE run in AMIP-type setup (unless otherwise noted). Column 1 is the identifier for the model configuration. See the text for a brief summary of these descriptors. They are defined in more detail in the following sections where the section titles also include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match Table entries with discussion in the text. Column 2 is $\mathcal{N}=${\tt{qsize\_condensate\_loading}} identifying how many water species are thermodynamically{\color{red}{/inertially}} active in the dynamical core (see section \ref{sec:defE} for details). Column 3, {\tt{lcp\_moist}}, indicates whether or not the heat capacity includes water variables or not and column 4 shows physics-dynamics coupling method {\tt{ftype}}. The TE tendencies $\partial \gi{E}$ in columns 5-14 are defined in section \ref{sec:diagnostics}. If $\partial \gi{E}$ is less than $10^{-5}$ $W/m^2$ it is set to zero in the Table. Significant changes compared to the baseline ({\em{TE consistent}} configuration) discussed in the main text are in bold font.}
 \label{table:TE}
 \begin{tabular}{c|ccc|ccc|cccccc|c}
 Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{E}_{phys}^{({pwork})}$ &  $\partial \gi{E}_{phys}^{({efix})}$ &  $\partial \gi{E}_{phys}^{({discr})}$ &  $\partial \gi{E}_{dyn}^{({2D})}$ & $\partial \gi{E}_{dyn}^{({hvis})}$ & $\partial \gi{E}_{dyn}^{({fheat})}$ & $\partial \gi{E}_{dyn}^{(res)}$ & $\partial \gi{E}_{dyn}^{(remap)}$ & $\partial \gi{E}_{dyn}^{(adiab)}$  & $\partial \gi{E}^{(pdc)}$\\
@@ -472,7 +479,7 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
 \item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS} (section \ref{sec:FHS94}),. 
 \item {\em{FV}}: A configuration with the SE dynamical core replaced with the finite-volume core (section \ref{sec:cam-fv}), and
 \item {\em{CSLAM}}: The quasi equal-area physics grid configuration of CAM-SE based on the TE consistent setup (section \ref{sec:cslam})
-\item {\em{CSLAM default}}: Same as {\em{CSLAM}} configuration but with {\tt{ftype=2}} and all forms of water thermodynamically active in the dynamical core.
+\item {\em{CSLAM default}}: Same as {\em{CSLAM}} configuration but with {\tt{ftype=2}} and all forms of water thermodynamically{\color{red}{/inertially}} active in the dynamical core.
 \end{itemize}
 
 
@@ -498,14 +505,22 @@ The right-hand plot in  Figure \ref{fig:dEdt(t)} shows a breakdown of the dynami
 While it is advantageous to use {\em{state-update}} physics-dynamics coupling algorithm ({\tt{ftype=1}}) in terms of having no spurious TE tendency from coupling, $\partial \gi{E}^{({pdc})}=0$, it does result in spurious gravity waves in the simulations \cite[see, e.g., Figure 5 in ][]{GetAl2018MWR}. Figure \ref{fig:abs_dpsdt}a shows a 1 year average of $|\frac{dp_s}{dt}|$, a measure of high frequency gravity wave noise. It clearly exhibits unphysical oscillations coinciding with element boundaries. Details of the spectral-element method, its coupling to physics and associated noise issues are discussed in detail in \citet{HetAl2018MWR}. The noise in the solutions is even visible in the 500hPa pressure velocity annual average (Figure \ref{fig:omega500}a). This issue can be alleviated by using a shorter physics time-step so that the physics increments are smaller (not shown). Climate modelers have historically not pursued a shorter physics time-step in production configurations as climate parameterizations are computationally expensive and there is a large sensitivity to physics time-steps in the simulated climate \citep[e.g.][]{WO2003QJR,WetAl2015JAMES}.
 
 \subsection{{\em{`dribbling' A/B}}: Non-TE conservative physics-dynamics coupling ({\tt{ftype=0,2}})}\label{se:pdc_problem}
-\subsubsection{Element boundary noise}\label{sec:noise}
+{\color{red}{Before discussing the impact of different PDC methods on the TE budget, we discuss element boundary noise issues in CAM-SE which are related to PDC method.}}
+\subsubsection{{\color{red}{Spurious }}element boundary noise {\color{red}{from physics-dynamics coupling}}}\label{sec:noise}
 When switching to {\em{dribbling}} physics-dynamics coupling algorithm ({\tt{ftype=0}}) in which the tendencies from physics are added throughout the dynamics (in this case twice per physics time-step) then the noise issues described in previous section disappear (Figure \ref{fig:abs_dpsdt}b and \ref{fig:omega500}b). That said, there is a significant issue with this approach; the tracer mass budgets may not be closed. How this comes about is illustrated in Figure \ref{fig:ftype_schematic} and explained in the next paragraph. 
 
 The orange curve on Figure \ref{fig:ftype_schematic}a, b, d, and e is the initial state of, e.g., cloud liquid mixing ratio as a function of location, e.g., longitude. Cloud liquid is zero outside of clouds and hence provides a good example for the purpose of this illustration. The light blue arrows show the increments (in terms of length of arrow) computed by the parameterizations based on the initial state and scaled for the partial update with {\em{dribbling}} ({\tt{ftype=0}}). With {\em{state-update}} ({\tt{ftype=1}}) the increments from physics are added to the dynamical core state (dotted line on \ref{fig:ftype_schematic}b) before the dynamical core advances the solution in time. The parameterizations are designed to not drive the mixing ratios negative so the state-update in dynamics will not generate negatives (or overshoots). Then the dynamical core advects the distribution (solid curve on Figure \ref{fig:ftype_schematic}c). With {\em{dribbling}} ({\tt{ftype=0}}) the physics increments are split into equal chunks (in this illustration two; blue errors on Figure \ref{fig:ftype_schematic}d). Half of the physics increments are added to the initial state (dotted line on Figure \ref{fig:ftype_schematic}e) and then dynamics advects the distribution half of the total dynamical core steps (dashed line on Figure \ref{fig:ftype_schematic}e). Then the other half of the physics increments are applied (in the same location as they were computed by physics). Now after the previous/first advection step the cloud liquid distribution has moved and the mixing ratio may be zero (or less than the increment prescribed by physics) where the physics forcing is applied (e.g., left side of dashed curve). Hence the physics increment is driving the mixing ratios negative in those locations. Thereafter the distribution is advected (solid curve on Figure \ref{fig:ftype_schematic}f). In CAM the increments added in the dynamical core are limited so that they drive the mixing to zero (but not negative) if this problem occurs. This leads to a net source of mass compared to the mass change that the parameterizations prescribe (see Figure \ref{fig:pdc}). Although the average source of mass is small each time-step it always has the same sign (i.e. it is a bias) and therefore accumulates. \citet{water-leak} estimated that this spurious source of mass is equivalent to $\sim 10cm$ sea-level rise per decade in coupled climate simulation experiments.
 
 The majority of the noise with {\em{state-update}} ({\tt{ftype=1}}) physics-dynamics coupling method comes from momentum sources/sinks and heating/cooling. A way to alleviate noise problems and, at the same time, close the tracer mass budgets (in physics-dynamics coupling) is to use {\em{state-update}} ({\tt{ftype=1}}) coupling for tracers and {\em{dribbling}} ({\tt{ftype=0}}) coupling for momentum and temperature (referred to as {\em{combination}}, {\tt{ftype=2}}). Figure \ref{fig:abs_dpsdt}c shows the noise diagnostic $|\frac{dp_s}{dt}|$ for {\em{combination}} ({\tt{ftype=2}}) coupling. Figure \ref{fig:abs_dpsdt}c looks very similar to Figure \ref{fig:abs_dpsdt}b but there is some noise near element boundaries. That said, in terms of vertical pressure velocities {\em{combination}} ({\tt{ftype=2}}) and {\em{dribbling}} ({\tt{ftype=0}}) climates are similar in terms of the level of noise (Figure \ref{fig:omega500}b and \ref{fig:omega500}c). The element noise in CAM-SE with {\em{combination}} ({\tt{ftype=2}}) seen in both $|\frac{dp_s}{dt}|$ and 500hPa pressure velocity can be `removed' by using CAM-SE-CSLAM (Figure \ref{fig:abs_dpsdt}d) which uses a quasi equal-area physics grid and CSLAM \cite[Conservative Semi-LAgrangian Multi-tracer; ][]{LNU2010JCP} consistently coupled to the SE method \citep{LTOUNGK2017MWR}. The noise patterns in vertical velocity off the western coast of South America are present in all CAM-SE simulations (and hence not related to physics-dynamics coupling algorithm) are also `removed' by using CAM-SE-CSLAM \citep{HetAl2018MWR}.
 \subsubsection{Spurious TE tendencies from physics-dynamics coupling}
-When using the same TE formula in the dynamical core and physics the spurious TE tendency from physics-dynamics coupling can be assessed. Since the pressure fields evolve during {\em{dribbling}} of physics forcing, the TE increments from the forcing change. For {\em{dribbling}} ({\tt{ftype=0}}) and {\em{combination}} ({\tt{ftype=2}}) this tendency is $\partial \gi{E}^{({pdc})}=-0.05 W/m^2$ and thus rather small compared to the viscosity TE dissipation rates. Since $\partial \gi{E}^{({pdc})}$ are the same (to the second digit) for  {\em{dribbling}} ({\tt{ftype=0}}) and  {\em{combination}} ({\tt{ftype=2}}) it is the momentum and temperature {\em{dribbling}} errors that dominate $\partial \gi{E}^{({pdc})}$.
+When using the same TE formula in the dynamical core and physics the spurious TE tendency from physics-dynamics coupling can be assessed. {\color{red}{As described in item \ref{item:pdc} (Section \ref{subsec:spuriousE}), PDC errors can be attributed to underlying pressure changes during the `dribbling' of temperature and velocity component increments as well as PDC `clipping' errors in the water variables (the process in which `clipping' occurs is described in detail in the previous subsection). The TE error associated with `clipping' PDC error occurs due to the mass-change prescribed by physics consistent with the fluxes in/out of the physics column does not equal the actual mass change applied to the dynamical core state due to `clipping'}}
+
+{\color{red}{For {\tt{ftype=2}} PDC only the increment for temperature and momentum are {\em{dribbled}} and the  PDC TE tendency is $\partial \gi{E}^{({pdc})}=-0.484 W/m^2$. When using {\tt{ftype=0}} PDC also tracer increments are  {\em{dribbled}}, which can lead to `clipping' PDC TE errors, a similar TE tendency results $\partial \gi{E}^{({pdc})}=-0.469 W/m^2$. The difference between the TE PDC tenendency for {\tt{ftype=2}} and {\tt{ftype=0}} provides an estimate of the TE PDC `clipping' error. The `clipping' PDC TE tenendency is very small $~0.015 W/m^2$.}}
+
+%For {\em{dribbling}} ({\tt{ftype=0}}) and {\em{combination}} ({\tt{ftype=2}}) the PDC TE tendency is $\partial \gi{E}^{({pdc})}=-0.05 W/m^2$ and thus rather small compared to the viscosity TE dissipation rates. Since $\partial \gi{E}^{({pdc})}$ are the same (to the second digit) for  {\em{dribbling}} ({\tt{ftype=0}}) and  {\em{combination}} ({\tt{ftype=2}}) it is the momentum and temperature {\em{dribbling}} errors that dominate $\partial \gi{E}^{({pdc})}$ {\color{red}{and not the PDC `clipping' errors}}.
+
+
+%{\color{red}{This results in a TE error referred to a `clipping' PDC error since the mass-change prescribed by physics consistent with the fluxes in/out of the physics column does not equal the actual mass change applied to the dynamical core state}}
 
 %{\color{red}{$\partial \gi{E}^{(pdc)}$ computed with \eqref{eq:pdc} is $3.709e-09$ and $\partial \gi{E}^{(pdc)}$ computed with \eqref{eq:pdc3} is $1.265e-05$. Why this discrepancy? Can we consider this noise?}} 
 \subsection{{\em{vert limiter}}: Limiters on vertical remapping of momentum}\label{sec:ppm}
@@ -515,7 +530,7 @@ Topography for CAM is generated using a new version of the software/algorithm de
 
 The default topography in CAM-SE uses the same amount of topography smoothing as CAM-FV (distance weighted smoother applied to the raw topography on $\sim 3$km cubed-sphere grid with a smoothing radius of 180km referred to as $C60$). When the topography is smoother (in this case using $C92$ smoothing, i.e. smoothing radius of approximately 276km) the hyperviscosity operators are less active leading to reduced TE errors, i.e. $\partial \gi{E}^{(hvis)}_{dyn}$ is reduced in half from approximately $-0.6W/m^2$ to $-0.3W/m^2$. The vertical remapping TE error, however, remains approximately the same. Since the pressure work {\color{red}{error}} is approximately $0.3W/m^2$ it almost exactly compensates for the TE tendency from the dynamical core $\partial \gi{E}^{(adiab)}_{dyn}$. Hence if one would only diagnose the TE tendency from the energy fixer one could mistakenly conclude that the model universally  conserves TE when, in fact, there are compensating TE errors in the system. These compensating errors  can only be diagnosed through a careful breakdown of the total TE tendencies.
 \subsection{{\em{default}}: TE formula discrepancy errors}\label{sec:ediscr}
-To assess the TE errors due to the discrepancy in the energy formula used by dynamics and physics, a simulation using {\em{state-updating}} ({\tt{ftype=1}}, no {\em{`dribbling}} errors) and thermodynamically active condensates in the dynamical core ($qsize\_condensate\_loading=5$) and consistent/accurate associated heat capacities $c_p^{(\ell)}$ (namelist {\tt{lcp\_moist=.true.}}) has been performed. In this setup the continuous equations of motion in the dynamical core conserve an energy different from physics, and the energy fixer will restore the `physics' version of energy. Despite the dynamical core now using a more comprehensive formula for energy, the TE dissipation terms in the dynamical core are roughly the same as in the energy consistent versions of the model. Using \eqref{eq:discre} we can assess the TE energy discrepancy errors which result in $\sim 0.59W/m^2$. \citet{T2011LNCSEb} found a similar result just from using the more comprehensive formula for heat capacity (based on dry air and water vapor) and not including thermodynamically active condensates. As noted before this formulation inconsistency is due to the evolutionary nature of CAM development and it is the intention to remove this inconsistency in future versions of the model.
+To assess the TE errors due to the discrepancy in the energy formula used by dynamics and physics, a simulation using {\em{state-updating}} ({\tt{ftype=1}}, no {\em{`dribbling}} errors) and thermodynamically{\color{red}{/inertially}} active condensates in the dynamical core ($qsize\_condensate\_loading=5$) and consistent/accurate associated heat capacities $c_p^{(\ell)}$ (namelist {\tt{lcp\_moist=.true.}}) has been performed. In this setup the continuous equations of motion in the dynamical core conserve an energy different from physics, and the energy fixer will restore the `physics' version of energy. Despite the dynamical core now using a more comprehensive formula for energy, the TE dissipation terms in the dynamical core are roughly the same as in the energy consistent versions of the model. Using \eqref{eq:discre} we can assess the TE energy discrepancy errors which result in $\sim 0.59W/m^2$. \citet{T2011LNCSEb} found a similar result just from using the more comprehensive formula for heat capacity (based on dry air and water vapor) and not including thermodynamically{\color{red}{/inertially}} active condensates. As noted before this formulation inconsistency is due to the evolutionary nature of CAM development and it is the intention to remove this inconsistency in future versions of the model.
 
 The default version of CAM-SE uses this configuration but with {\em{combination}} ({\tt{ftype=2}}) which has similar TE characteristics (see Table \ref{table:TE}). That said, the physics-dynamics coupling error from {\em{dribbling}} momentum and temperature tendencies and the energy discrepancy errors can not be separated in this configuration:
 \begin{equation}
