--- a/src/energy.tex
+++ b/src/energy.tex
@@ -505,7 +505,7 @@ The right-hand plot in  Figure \ref{fig:dEdt(t)} shows a breakdown of the dynami
 While it is advantageous to use {\em{state-update}} physics-dynamics coupling algorithm ({\tt{ftype=1}}) in terms of having no spurious TE tendency from coupling, $\partial \gi{E}^{({pdc})}=0$, it does result in spurious gravity waves in the simulations \cite[see, e.g., Figure 5 in ][]{GetAl2018MWR}. Figure \ref{fig:abs_dpsdt}a shows a 1 year average of $|\frac{dp_s}{dt}|$, a measure of high frequency gravity wave noise. It clearly exhibits unphysical oscillations coinciding with element boundaries. Details of the spectral-element method, its coupling to physics and associated noise issues are discussed in detail in \citet{HetAl2018MWR}. The noise in the solutions is even visible in the 500hPa pressure velocity annual average (Figure \ref{fig:omega500}a). This issue can be alleviated by using a shorter physics time-step so that the physics increments are smaller (not shown). Climate modelers have historically not pursued a shorter physics time-step in production configurations as climate parameterizations are computationally expensive and there is a large sensitivity to physics time-steps in the simulated climate \citep[e.g.][]{WO2003QJR,WetAl2015JAMES}.
 
 \subsection{{\em{`dribbling' A/B}}: Non-TE conservative physics-dynamics coupling ({\tt{ftype=0,2}})}\label{se:pdc_problem}
-{\color{red}{Before discussing the impact of different PDC methods on the TE budget, we discuss element boundary noise issues in CAM-SE which are related to PDC method.}}
+{\color{red}{Before discussing the impact of different PDC methods on the TE budget, we discuss element boundary noise issues in CAM-SE which are related to PDC method. This motivates the different PDC methods implemented in CAM-SE.}}
 \subsubsection{{\color{red}{Spurious }}element boundary noise {\color{red}{from physics-dynamics coupling}}}\label{sec:noise}
 When switching to {\em{dribbling}} physics-dynamics coupling algorithm ({\tt{ftype=0}}) in which the tendencies from physics are added throughout the dynamics (in this case twice per physics time-step) then the noise issues described in previous section disappear (Figure \ref{fig:abs_dpsdt}b and \ref{fig:omega500}b). That said, there is a significant issue with this approach; the tracer mass budgets may not be closed. How this comes about is illustrated in Figure \ref{fig:ftype_schematic} and explained in the next paragraph. 
 
